# AndroidResourceTranslator

./: .dockerignore  .gitignore  AndroidResourceTranslator.py  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  Dockerfile  README.md  action.yml  git_utils.py  pyproject.toml  requirements.txt  test_escape_functionality.py
.github/: CONTRIBUTING  CONTRIBUTING.md  dependabot.yml
.github/scripts/: generate_release_notes.py
.github/workflows/: build.yml  major-release-num.yml  release-notes-generator.yml
app/: AndroidResourceTranslator.py  git_utils.py  language_utils.py  llm_provider.py  string_utils.py  test_escape_functions.py
app/tests/: test_gitignore.py  test_integration.py  test_language_utils.py  test_report.py  test_resource_parser.py  test_translation.py  test_xml_formatting.py
sample_project/: README.md
sample_project/MyApp/src/main/res/values/: strings.xml
sample_project/MyApp/src/main/res/values-es/: strings.xml
sample_project/MyApp/src/main/res/values-fr/: strings.xml
sample_project/MyApp/src/main/res/values-pt-rPT/: strings.xml
sample_project/MyApp/src/main/res/values-zh-rCN/: strings.xml
sample_project/ScrollessCrashRepro/: README.md
tests/: integration.py  run_tests.py  test_AndroidResourceTranslator.py  test_gitignore.py  test_integration.py  test_report.py  test_resource_parser.py  test_translation.py  test_xml_formatting.py  tests.py
tests/test_resources/ignored_folder/values-fr/: strings.xml
tests/test_resources/values/: strings.xml
tests/test_resources/values-es/: strings.xml
(+2 files in other folders)
