[tool.poetry]
name = "src"
version = "1.0"
description = "Android String Translator"
authors = ["Duarte Barbosa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.6.1"

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"